force-app/main/default/src/objects/PJN_CarePlan_Path_Coaching_Setting__mdt/PJN_CarePlan_Path_Coaching_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Program Builder; Care Plan Path Coaching
Purpose: Define the guidance and key fields for each program problem/stage.
Metadata Relationship(s): Program Problem; CarePlan Path Keys Setting
Created by Mavens: Yes</description>
    <label>CarePlan Path Coaching Setting</label>
    <pluralLabel>CarePlan Path Coaching Settings</pluralLabel>
</CustomObject>