force-app/main/default/src/objects/PJN_CarePlan_Path_Coaching_Setting__mdt/fields/PJN_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Component_Name__c</fullName>
    <defaultValue>&apos;PJN_CarePlanPathKeys&apos;</defaultValue>
    <label>Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>