force-app/main/default/src/objects/PJN_CarePlan_Path_Coaching_Setting__mdt/fields/PJN_Mode__c.field-meta.xml
<CustomField>
    <fullName>PJN_Mode__c</fullName>
    <label>Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>left</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>right</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>flexible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>