force-app/main/default/src/objects/PJN_CarePlan_Path_Coaching_Setting__mdt/fields/PJN_Program_Problem__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program_Problem__c</fullName>
    <label>Program Problem</label>
    <referenceTo>PJN_Program_Problem__mdt</referenceTo>
    <relationshipName>PJN_CarePlan_Path_Keys_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>