force-app/main/default/src/objects/PJN_CarePlan_Path_Coaching_Setting__mdt/listViews/PJN_All_Path_Coaching_Settings.listView-meta.xml
<ListView>
    <fullName>PJN_All_Path_Coaching_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Program_Problem__c</columns>
    <columns>PJN_Component_Name__c</columns>
    <columns>PJN_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Path Coaching Settings</label>
    <language>en_US</language>
</ListView>